@@ -33,6 +33,10 @@ int main(int argc, char * argv[])
     try
     {
         Options options;
+        options.descriptions.add_options()
+            ("show-urls", "Show all the capability URLs")
+            ;
+
         if (!options.ParseCommandLine(argc, argv))
         {
             return 0;
@@ -46,15 +50,6 @@ int main(int argc, char * argv[])
         }
         cout << "Logged in\n";
         
-        if (session->GetDetectedRetsVersion() != session->GetRetsVersion())
-        {
-            cout << "** Warning, requested RETS version \"" 
-                 << session->RetsVersionToString(session->GetRetsVersion())
-                 << "\", got version \""
-                 << session->RetsVersionToString(session->GetDetectedRetsVersion())
-                 << "\" ** " << endl;
-        }
-
         LoginResponse * login = session->GetLoginResponse();
         cout << "Member name: " << login->GetMemberName() << endl;
         
@@ -62,6 +57,50 @@ int main(int argc, char * argv[])
         cout << "Search URL: " << urls->GetSearchUrl() << endl;
 
         cout << "Action:\n" << session->GetAction() << endl;
+
+        if (options.count("show-urls"))
+        {
+            /*
+             * Action and Search URLs unconditionally shown above.
+             */
+            cout << "Change Password URL: " << urls->GetChangePasswordUrl() << endl;
+            cout << "GetObject URL: " << urls->GetGetObjectUrl() << endl;
+            cout << "Login Complete URL: " << urls->GetLoginCompleteUrl() << endl;
+            cout << "Logout URL: " << urls->GetLogoutUrl() << endl;
+            cout << "GetMetadata URL: " << urls->GetGetMetadataUrl() << endl;
+            cout << "ServerInformation URL: " << urls->GetServerInformationUrl() << endl;
+            cout << "Update URL: " << urls->GetUpdateUrl() << endl;
+            cout << endl;
+        }
+        
+        if (session->GetDetectedRetsVersion() == RETS_1_7)
+        {
+            try
+            {
+                ServerInformationResponseAPtr serverInfo = session->GetServerInformation();
+                
+                if (serverInfo.get())
+                {
+                    StringVector parameters = serverInfo->GetParameters();
+                    StringVector::const_iterator i;
+                    for (i = parameters.begin(); i != parameters.end(); i++)
+                    {
+                        if (i->empty())
+                        {
+                            continue;
+                        }
+                        cout << *i << ": " << serverInfo->GetValue(*i) << endl;
+                    }
+                }
+            }
+            catch (RetsException & e)
+            {
+               /*
+                * The ServerInformation Transaction is not supported.
+                * Continue silently.
+                */
+            }
+        }
 
         LogoutResponseAPtr logout = session->Logout();
         cout << "Logged out\n";
