@@ -1441,9 +1441,10 @@ class SqlToDmqlCompiler
 class RetsSession
 {
   public:
-    static const unsigned int MODE_CACHE      = 0x01;
-    static const unsigned int MODE_NO_STREAM  = 0x02;
-    static const unsigned int MODE_NO_EXPECT  = 0x04;
+    static const unsigned int MODE_CACHE          = 0x01;
+    static const unsigned int MODE_NO_STREAM      = 0x02;
+    static const unsigned int MODE_NO_EXPECT      = 0x04;
+    static const unsigned int MODE_NO_SSL_VERIFY  = 0x08;
 
     RetsSession(std::string loginUrl) 
                                   throw(RetsHttpException, 
