@@ -3,6 +3,11 @@ Version 1.3.0 - xx xxx 2008
   * Converted the http client model to allow for parallel
     search requests. Ticket #73.
 
+  * Added RETS 1.7 checks to example code. Ticket #58.
+
+  * Throw an exception when trying to dereference a null
+    URL. Ticket #84.
+
   * Add RetsSession::MODE_NO_SSL_VERIFY to disable SSL
     verification. Ticket #87.
 
